--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -1,8 +1,11 @@
-$green: #f70101;
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
+
+$red: #33A243;
 $white: rgb(244, 244, 244);
 
 body {
-	background-image: url("../img/bg1.jpg");
+	/*background-image: url("../img/bg1.jpg");*/
+	background-color: #E7D9C1;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -13,13 +16,14 @@ body {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover; 
+	font-family: "Roboto";
 }
 #header{
 	#title{
 		float:left;
 		color: $white;
 	}
-	background-color: $green;
+	background-color: $red;
 	padding: 20px 40px 0px 40px;
 	.nav-tabs{
 		border-bottom: 0px;
@@ -28,7 +32,7 @@ body {
 			float: right;
 			&:hover, &:active{				
 				 a{
-				 	color: $green;
+				 	color: $red;
 				 	border-radius: 10px 10px 0px 0px !important;
 				 	background-color: #fff;
 				 	border-bottom: 0px;
@@ -36,7 +40,7 @@ body {
 			}
 		}
 		.active a{
-			color: $green;
+			color: $red;
 		}
 	}
 	a{
@@ -47,4 +51,12 @@ body {
 }
 #container{
 	padding: 50px;
+	.results{
+		border: 4px solid $red;
+		border-radius: 10px;
+		.row{
+			border-bottom: 1px solid #CCC;
+			padding: 10px 0px;
+		}
+	}
 }
