functionality down bro

--- a/assets/css/css/main.css
+++ b/assets/css/css/main.css
@@ -1,6 +1,8 @@
-/* line 4, ../sass/main.scss */
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
+/* line 6, ../sass/main.scss */
 body {
-  background-image: url("../img/bg1.jpg");
+  /*background-image: url("../img/bg1.jpg");*/
+  background-color: #E7D9C1;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -11,46 +13,57 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: "Roboto";
 }
 
-/* line 17, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 #header {
-  background-color: #f70101;
+  background-color: #33A243;
   padding: 20px 40px 0px 40px;
 }
-/* line 18, ../sass/main.scss */
+/* line 22, ../sass/main.scss */
 #header #title {
   float: left;
   color: #f4f4f4;
 }
-/* line 24, ../sass/main.scss */
+/* line 28, ../sass/main.scss */
 #header .nav-tabs {
   border-bottom: 0px;
 }
-/* line 26, ../sass/main.scss */
+/* line 30, ../sass/main.scss */
 #header .nav-tabs li {
   padding: 0px 10px;
   float: right;
 }
-/* line 30, ../sass/main.scss */
+/* line 34, ../sass/main.scss */
 #header .nav-tabs li:hover a, #header .nav-tabs li:active a {
-  color: #f70101;
+  color: #33A243;
   border-radius: 10px 10px 0px 0px !important;
   background-color: #fff;
   border-bottom: 0px;
 }
-/* line 38, ../sass/main.scss */
-#header .nav-tabs .active a {
-  color: #f70101;
-}
 /* line 42, ../sass/main.scss */
+#header .nav-tabs .active a {
+  color: #33A243;
+}
+/* line 46, ../sass/main.scss */
 #header a {
   color: #f4f4f4;
   font-weight: 600;
   border-radius: 10px 10px 0px 0px !important;
 }
 
-/* line 48, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 #container {
   padding: 50px;
+}
+/* line 54, ../sass/main.scss */
+#container .results {
+  border: 4px solid #33A243;
+  border-radius: 10px;
+}
+/* line 57, ../sass/main.scss */
+#container .results .row {
+  border-bottom: 1px solid #CCC;
+  padding: 10px 0px;
 }
