--- a/assets/css/css/main.css
+++ b/assets/css/css/main.css
@@ -18,7 +18,7 @@ body {
 
 /* line 21, ../sass/main.scss */
 #header {
-  background-color: #33A243;
+  background-color: #b70101;
   padding: 20px 40px 0px 40px;
 }
 /* line 22, ../sass/main.scss */
@@ -37,14 +37,14 @@ body {
 }
 /* line 34, ../sass/main.scss */
 #header .nav-tabs li:hover a, #header .nav-tabs li:active a {
-  color: #33A243;
+  color: #b70101;
   border-radius: 10px 10px 0px 0px !important;
   background-color: #fff;
   border-bottom: 0px;
 }
 /* line 42, ../sass/main.scss */
 #header .nav-tabs .active a {
-  color: #33A243;
+  color: #b70101;
 }
 /* line 46, ../sass/main.scss */
 #header a {
@@ -59,11 +59,22 @@ body {
 }
 /* line 54, ../sass/main.scss */
 #container .results {
-  border: 4px solid #33A243;
+  border: 4px solid #B70101;
   border-radius: 10px;
 }
 /* line 57, ../sass/main.scss */
-#container .results .row {
+#container .results .items {
+  margin: 20px 0px;
+  height: 500px;
+  overflow-y: scroll;
+}
+/* line 61, ../sass/main.scss */
+#container .results .items .row {
   border-bottom: 1px solid #CCC;
   padding: 10px 0px;
+}
+
+/* line 68, ../sass/main.scss */
+select {
+  width: 150px;
 }
