--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
 
-$red: #33A243;
+$red: #b70101;
 $white: rgb(244, 244, 244);
 
 body {
@@ -52,11 +52,19 @@ body {
 #container{
 	padding: 50px;
 	.results{
-		border: 4px solid $red;
+		border: 4px solid #B70101;
 		border-radius: 10px;
-		.row{
-			border-bottom: 1px solid #CCC;
-			padding: 10px 0px;
+		.items{
+			margin: 20px 0px;
+			height: 500px;
+			overflow-y: scroll;
+			.row{
+				border-bottom: 1px solid #CCC;
+				padding: 10px 0px;
+			}
 		}
 	}
+}
+select{
+	width: 150px;
 }
